finishing main functionalities
